// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SOAPNoteEntry component > RTL snapshot tests > matches snapshot in LTR mode 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-3"
      >
        <span
          class="inline-flex items-center gap-2 rounded-full bg-secondary px-3 py-1.5 text-sm font-semibold text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clipboard-list h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="4"
              rx="1"
              ry="1"
              width="8"
              x="8"
              y="2"
            />
            <path
              d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
            />
            <path
              d="M12 11h4"
            />
            <path
              d="M12 16h4"
            />
            <path
              d="M8 11h.01"
            />
            <path
              d="M8 16h.01"
            />
          </svg>
          templateAssist
        </span>
        <span
          class="text-xs text-warning font-semibold"
        >
          aiUnavailableOffline
        </span>
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-subjective"
        >
          subjective
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-subjective"
          maxlength="10000"
          placeholder="subjectivePlaceholder"
          rows="5"
        />
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-objective"
        >
          objective
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-objective"
          maxlength="10000"
          placeholder="objectivePlaceholder"
          rows="5"
        />
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-assessment"
        >
          assessment
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-assessment"
          maxlength="10000"
          placeholder="assessmentPlaceholder"
          rows="4"
        />
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-plan"
        >
          plan
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-plan"
          maxlength="10000"
          placeholder="planPlaceholder"
          rows="4"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SOAPNoteEntry component > RTL snapshot tests > matches snapshot in RTL mode 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-3"
      >
        <span
          class="inline-flex items-center gap-2 rounded-full bg-secondary px-3 py-1.5 text-sm font-semibold text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clipboard-list h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="4"
              rx="1"
              ry="1"
              width="8"
              x="8"
              y="2"
            />
            <path
              d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
            />
            <path
              d="M12 11h4"
            />
            <path
              d="M12 16h4"
            />
            <path
              d="M8 11h.01"
            />
            <path
              d="M8 16h.01"
            />
          </svg>
          templateAssist
        </span>
        <span
          class="text-xs text-warning font-semibold"
        >
          aiUnavailableOffline
        </span>
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-subjective"
        >
          subjective
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-subjective"
          maxlength="10000"
          placeholder="subjectivePlaceholder"
          rows="5"
        />
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-objective"
        >
          objective
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-objective"
          maxlength="10000"
          placeholder="objectivePlaceholder"
          rows="5"
        />
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-assessment"
        >
          assessment
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-assessment"
          maxlength="10000"
          placeholder="assessmentPlaceholder"
          rows="4"
        />
      </div>
      <div>
        <label
          class="mb-2 block text-sm font-semibold text-foreground"
          for="soap-plan"
        >
          plan
        </label>
        <textarea
          class="w-full rounded-xl border border-border bg-background px-4 py-3
    text-base text-foreground placeholder:text-muted-foreground
    focus:border-primary focus:outline-none focus:ring-2 focus:ring-ring
    transition-colors"
          dir="auto"
          id="soap-plan"
          maxlength="10000"
          placeholder="planPlaceholder"
          rows="4"
        />
      </div>
    </div>
  </div>
</div>
`;
